--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,7 @@
+// Global Styles
 @import './global/config';
 @import './global/base';
+@import './global/layout';
+
+// Component Styles
+@import '../components/search/searchbar';
