tracklist styling updates

--- a/src/styles/global/_config.scss
+++ b/src/styles/global/_config.scss
@@ -3,5 +3,6 @@
 $backgroundColor: #000419;
 $foregroundColor: #FFF;
 $primaryColor: #3B32BC;
+$secondaryColor: #32aabc;
 
 $fontFamily: 'Source Sans Pro', Arial;
