--- a/src/styles/global/_layout.scss
+++ b/src/styles/global/_layout.scss
@@ -9,3 +9,11 @@ main {
         margin: 0;
     }
 }
+
+.secondaryHighlight {
+    color: $secondaryColor;
+}
+
+.primaryHighlight {
+    color: $primaryColor;
+}
