--- a/src/components/tracks/_trackview.scss
+++ b/src/components/tracks/_trackview.scss
@@ -67,4 +67,11 @@
             border-radius: 100%;
         }
     }
+
+    &__times {
+        display: flex;
+        flex-basis: 80%;
+        justify-content: space-between;
+        margin-bottom: .3rem;
+    }
 }
