--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,4 @@
 // Component Styles
 @import '../components/search/searchbar';
 @import '../components/tracks/trackview';
+@import '../components/tracks/tracklist';
