Error message & styles update

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import './global/layout';
 
 // Component Styles
+@import '../components/error/error';
 @import '../components/search/searchbar';
 @import '../components/tracks/trackview';
 @import '../components/tracks/tracklist';
