--- a/src/components/tracks/_trackview.scss
+++ b/src/components/tracks/_trackview.scss
@@ -2,6 +2,18 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    &__back {
+        padding: 1rem;
+        position: absolute;
+        top: .5rem;
+        left: .5rem;
+        z-index: 2;
+        img {
+            height: auto;
+            width: 15px;
+        }
+    }
     
     &__label {
         flex-basis: 100%;
