--- a/src/components/tracks/_trackview.scss
+++ b/src/components/tracks/_trackview.scss
@@ -77,6 +77,11 @@
         &--highlight {
             background-color: $primaryColor;
             border-radius: 100%;
+            display: flex;
+            height: 62px;
+            justify-content: center;
+            padding: .3rem;
+            width: 62px;
         }
     }
 
