--- a/src/styles/global/_config.scss
+++ b/src/styles/global/_config.scss
@@ -4,5 +4,7 @@ $backgroundColor: #000419;
 $foregroundColor: #FFF;
 $primaryColor: #3B32BC;
 $secondaryColor: #32aabc;
+$tertiaryColor: #CBCBCB;
+
 
 $fontFamily: 'Source Sans Pro', Arial;
