--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 // Global Styles
 @import './global/config';
+@import './global/mixins';
+@import './global/animations';
 @import './global/base';
 @import './global/layout';
 
