--- a/src/components/error/_error.scss
+++ b/src/components/error/_error.scss
@@ -1,6 +1,8 @@
 .error {
     display: flex;
     flex-wrap: wrap;
+    position: relative;
+    width: 100%;
     h2 {
         font-size: 2.5rem;
         flex-basis: 100%;
