--- a/src/components/tracks/_trackview.scss
+++ b/src/components/tracks/_trackview.scss
@@ -25,6 +25,8 @@ $fit-thumb-in-slider: -8px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    position: relative;
+    width: 100%;
 
     &__back {
         padding: 1rem;
@@ -87,6 +89,7 @@ $fit-thumb-in-slider: -8px;
 
     &__controls {
         display: flex;
+        flex-basis: 100%;
         justify-content: center;
         margin: 1rem 1.2rem 2rem 1.2rem;
     }
@@ -108,9 +111,13 @@ $fit-thumb-in-slider: -8px;
         }
     }
 
+    &__range {
+      flex-basis: 240px;
+    }
+
     &__times {
         display: flex;
-        flex-basis: 80%;
+        flex-basis: 100%;
         justify-content: space-between;
         margin-bottom: .3rem;
     }
