--- a/src/styles/global/_layout.scss
+++ b/src/styles/global/_layout.scss
@@ -1,13 +1,17 @@
 main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     padding: 1rem;
+    position: relative;
 
     h1 {
         font-size: 2rem;
         margin: 0;
     }
+}
+
+.layout {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .secondaryHighlight {
